3.aws-ingress.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-namespace
  name: test-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      - image: "nginx:1.14.2"
        imagePullPolicy: Always
        name: test-pod
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: test-namespace
  name: test-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test-namespace
  name: test-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-service
              port:
                number: 80
